--- a/PowerShellTools/PowerShellTools.csproj
+++ b/PowerShellTools/PowerShellTools.csproj
@@ -193,6 +193,9 @@
       <HintPath>$(DevEnvDir)\PrivateAssemblies\Microsoft.Windows.Design.Host.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="PowerShellTools.Interfaces, Version=1.0.0.0, Culture=neutral, PublicKeyToken=1c1481464c386bc0, processorArchitecture=MSIL">
+      <HintPath>..\packages\PowerShellTools.Interfaces.1.0.0\lib\net46\PowerShellTools.Interfaces.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
@@ -400,6 +403,13 @@
     <Compile Include="Project\LocDisplayNameAttribute.cs" />
     <Compile Include="Project\PowerShellConfigProvider.cs" />
     <Compile Include="Project\PowerShellNonCodeFileNode.cs" />
+    <Compile Include="Project\PropertyPages\AdvancedPropertyPage.cs" />
+    <Compile Include="Project\PropertyPages\AdvanvedPropertyPageControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Project\PropertyPages\AdvanvedPropertyPageControl.Designer.cs">
+      <DependentUpon>AdvanvedPropertyPageControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="Project\PropertyPages\BuildEventPropertyPage.cs" />
     <Compile Include="Project\PropertyPages\BuildEventPropertyPageControl.cs">
       <SubType>UserControl</SubType>
@@ -666,6 +676,9 @@
       <SubType>Designer</SubType>
       <LastGenOutput>ResourceStrings.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Include="Project\PropertyPages\AdvanvedPropertyPageControl.resx">
+      <DependentUpon>AdvanvedPropertyPageControl.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Project\PropertyPages\BuildEventPropertyPageControl.resx">
       <DependentUpon>BuildEventPropertyPageControl.cs</DependentUpon>
     </EmbeddedResource>
@@ -744,6 +757,7 @@
       <InstallRoot>MSBuild</InstallRoot>
       <VSIXSubPath>PowerShell Tools for Visual Studio</VSIXSubPath>
     </Content>
+    <None Include="packages.config" />
     <None Include="Project\SharedProject\ProcessOutput.cs.rej" />
     <None Include="Resources\WarningIcon.ico" />
     <None Include="Resources\ErrorStatus.png" />
