--- a/PowerShellTools.MSBuild/PowerShellTools.MSBuild.csproj
+++ b/PowerShellTools.MSBuild/PowerShellTools.MSBuild.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="RunPowerShellCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="MsBuildPowerShellHost.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
