--- a/PowerShellTools.MSBuild/PowerShellTools.MSBuild.csproj
+++ b/PowerShellTools.MSBuild/PowerShellTools.MSBuild.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="NewModuleManifestTask.cs" />
     <Compile Include="RunPowerShellCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MsBuildPowerShellHost.cs" />
