--- a/PowerShellTools/PowerShellTools.csproj
+++ b/PowerShellTools/PowerShellTools.csproj
@@ -196,7 +196,7 @@
     <Reference Include="Microsoft.VisualStudio.TextManager.Interop.8.0" />
     <Reference Include="Microsoft.VisualStudio.Threading, Version=$(VSTarget).0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" Condition="'$(VSTarget)' == '14.0'" />
     <Reference Include="Microsoft.VisualStudio.Threading, Version=15.5.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" Condition="'$(VSTarget)' == '15.0'" />
-    <Reference Include="Microsoft.VisualStudio.Validation, Version=15.3.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+    <Reference Include="Microsoft.VisualStudio.Validation, Version=15.3.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL"  Condition="'$(VSTarget)' == '15.0'">
       <HintPath>..\packages\Microsoft.VisualStudio.Validation.15.3.32\lib\net45\Microsoft.VisualStudio.Validation.dll</HintPath>
       <Private>True</Private>
     </Reference>
@@ -242,9 +242,9 @@
     <Reference Include="WindowsBase" />
     <Reference Include="System.Xaml" />
     <Reference Include="WindowsFormsIntegration" />
-    <Reference Include="Microsoft.VisualStudio.Workspace" />
-    <Reference Include="Microsoft.VisualStudio.Workspace.Extensions" />
-    <Reference Include="Microsoft.VisualStudio.Workspace.Extensions.VS" />
+    <Reference Include="Microsoft.VisualStudio.Workspace"  Condition="'$(VSTarget)' == '15.0'"/>
+    <Reference Include="Microsoft.VisualStudio.Workspace.Extensions"  Condition="'$(VSTarget)' == '15.0'"/>
+    <Reference Include="Microsoft.VisualStudio.Workspace.Extensions.VS"  Condition="'$(VSTarget)' == '15.0'"/>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Classification\ClassificationType.cs">
