--- a/PowerShellTools/packages.config
+++ b/PowerShellTools/packages.config
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.TestPlatform.ObjectModel" version="15.0.0" targetFramework="net45" />
+  <package id="Microsoft.PowerShell.5.ReferenceAssemblies" version="1.1.0" targetFramework="net46" />
+  <package id="Microsoft.TestPlatform.ObjectModel" version="15.7.2" targetFramework="net45" />
   <package id="Microsoft.VisualStudio.TestWindow.Interfaces" version="11.0.61030" targetFramework="net45" />
-  <package id="Microsoft.VisualStudio.Validation" version="15.3.32" targetFramework="net46" />
-  <package id="Microsoft.VSSDK.BuildTools" version="15.1.192" targetFramework="net46" developmentDependency="true" />
-  <package id="Microsoft.VSSDK.Vsixsigntool" version="15.0.26201" targetFramework="net45" />
+  <package id="Microsoft.VisualStudio.Validation" version="15.3.53" targetFramework="net46" />
+  <package id="Microsoft.VSSDK.BuildTools" version="15.7.109" targetFramework="net46" developmentDependency="true" />
+  <package id="Microsoft.VSSDK.Vsixsigntool" version="15.7.27703" targetFramework="net45" />
   <package id="PowerShellTools.Interfaces" version="1.0.2" targetFramework="net46" />
 </packages>
